# tcxOscJlWrap

./: CMakeLists.txt  LICENSE  README.md  addon.json
buildJuliaProject/: addons.make
buildJuliaProject/src/: tcApp.cpp
src/: JlTrussC.cpp  JlTrussC.h  tcxOscJl.cpp
tools/bindgen/: main.py
